build/log/idf_py_stdout_output_6044
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D D:\ESP-Project1\Project-Based-Learning\build\bootloader\esp-idf\esptool_py && d:\ESP-IDF_Tools\python_env\idf5.5_py3.11_env\Scripts\python.exe D:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/ESP-Project1/Project-Based-Learning/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/ds18b20/CMakeFiles/__idf_ds18b20.dir/ds18b20.c.obj
FAILED: esp-idf/ds18b20/CMakeFiles/__idf_ds18b20.dir/ds18b20.c.obj 
ccache D:\ESP-IDF_Tools\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/ESP-Project1/Project-Based-Learning/build/config -ID:/ESP-Project1/Project-Based-Learning/components/ds18b20 -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/newlib/platform_include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/freertos/config/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/freertos/config/include/freertos -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/freertos/config/xtensa/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/freertos/esp_additions/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/include/soc -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/include/soc/esp32 -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/dma/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/ldo/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/debug_probe/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/power_supply/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/port/esp32/. -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_hw_support/port/esp32/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/heap/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/heap/tlsf -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/log/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/soc/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/soc/esp32 -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/soc/esp32/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/soc/esp32/register -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/hal/platform_port/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/hal/esp32/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/hal/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_rom/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_rom/esp32/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_rom/esp32/include/esp32 -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_rom/esp32 -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_common/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_system/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_system/port/soc -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_system/port/include/private -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/xtensa/esp32/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/xtensa/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/xtensa/deprecated_include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/include/apps -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/include/apps/sntp -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/lwip/src/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/port/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/port/freertos/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/port/esp32xx/include -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/port/esp32xx/include/arch -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/lwip/port/esp32xx/include/sys -ID:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf/components/esp_driver_gpio/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/ESP-Project1/Project-Based-Learning=. -fmacro-prefix-map=D:/ESP-IDF_Tools/Espressif/releases/esp-idf-v5.5/v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ds18b20/CMakeFiles/__idf_ds18b20.dir/ds18b20.c.obj -MF esp-idf\ds18b20\CMakeFiles\__idf_ds18b20.dir\ds18b20.c.obj.d -o esp-idf/ds18b20/CMakeFiles/__idf_ds18b20.dir/ds18b20.c.obj -c D:/ESP-Project1/Project-Based-Learning/components/ds18b20/ds18b20.c
D:/ESP-Project1/Project-Based-Learning/components/ds18b20/ds18b20.c:10:20: error: static declaration of 'ow_output_low' follows non-static declaration
   10 | static inline void ow_output_low(void) { gpio_set_direction(DS18B20_GPIO_PIN, GPIO_MODE_OUTPUT); gpio_set_level(DS18B20_GPIO_PIN, 0); }
      |                    ^~~~~~~~~~~~~
In file included from D:/ESP-Project1/Project-Based-Learning/components/ds18b20/ds18b20.c:5:
D:/ESP-Project1/Project-Based-Learning/components/ds18b20/ds18b20.h:9:6: note: previous declaration of 'ow_output_low' with type 'void(void)'
    9 | void ow_output_low(void) ;
      |      ^~~~~~~~~~~~~
D:/ESP-Project1/Project-Based-Learning/components/ds18b20/ds18b20.c:11:20: error: static declaration of 'ow_input' follows non-static declaration
   11 | static inline void ow_input(void)      { gpio_set_direction(DS18B20_GPIO_PIN, GPIO_MODE_INPUT); }
      |                    ^~~~~~~~
D:/ESP-Project1/Project-Based-Learning/components/ds18b20/ds18b20.h:10:6: note: previous declaration of 'ow_input' with type 'void(void)'
   10 | void ow_input(void) ;
      |      ^~~~~~~~
D:/ESP-Project1/Project-Based-Learning/components/ds18b20/ds18b20.c:12:20: error: static declaration of 'ow_read' follows non-static declaration
   12 | static inline int  ow_read(void)       { return gpio_get_level(DS18B20_GPIO_PIN); }
      |                    ^~~~~~~
D:/ESP-Project1/Project-Based-Learning/components/ds18b20/ds18b20.h:11:6: note: previous declaration of 'ow_read' with type 'int(void)'
   11 | int  ow_read(void)   ;
      |      ^~~~~~~
[5/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ds18b20_read.c.obj
D:/ESP-Project1/Project-Based-Learning/main/ds18b20_read.c: In function 'task_led_control':
D:/ESP-Project1/Project-Based-Learning/main/ds18b20_read.c:270:10: warning: variable 'is_alarm_on' set but not used [-Wunused-but-set-variable]
  270 |     bool is_alarm_on;
      |          ^~~~~~~~~~~
D:/ESP-Project1/Project-Based-Learning/main/ds18b20_read.c: In function 'data_task':
D:/ESP-Project1/Project-Based-Learning/main/ds18b20_read.c:290:10: warning: variable 'last_fire' set but not used [-Wunused-but-set-variable]
  290 |     bool last_fire = false;
      |          ^~~~~~~~~
ninja: build stopped: subcommand failed.
